--- a/style/style.css
+++ b/style/style.css
@@ -69,11 +69,27 @@
     background-color: rgba(158, 158, 158, 0.7);
 }
 .lab {
-    margin-top: 20px;
+    margin-top: 40px;
+    align-items: center;
 }
-.href {
-    height: 64px;
-    width: 64px;
+#href1 {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
 }
-
-
+#href1:hover {
+    background-color: rgb(214, 210, 210);
+    border-radius: 5px;
+    transition: 500ms;
+}
+#href2 {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin-left: 30px;
+}
+#href2:hover {
+    background-color: rgb(214, 210, 210);
+    border-radius: 5px;
+    transition: 500ms;
+}
