--- a/style.css
+++ b/style.css
@@ -1,77 +1,62 @@
 body {
-    background-color: rgb(255, 255, 255);
-}
-.container {
-    box-sizing: border-box;
+    margin: 0;
+    padding-top: 75px;
 }
 .header {
-    background-color: rgb(107, 147, 232);
+    width: 100%;
     height: auto;
-    width: auto;
-    padding: 10px;
+    background-color: rgb(239, 239, 247);
+    margin-top: -75px;
+    padding: 15px 0 15px 0;
 }
-.nav1 {
-    background-color: tomato;
-    border: none;
-    height: 35px;
+.header-item {
+    height: 45px;
+    background-color: rgb(158, 211, 158);
+    border-radius: 5px;
+    border: 1px solid black;
+    margin-left: 20px;
     color: white;
+    text-transform: uppercase;
+    font-family: sans-serif;
 }
-.nav2 {
-    background-color: tomato;
-    border: none;
-    height: 35px;
-    color: white;
-}
-.nav3 {
-    background-color: tomato;
-    border: none;
-    height: 35px;
-    color: white;
-    float: right;
-}
-.cont-item-1,
-.cont-item-2,
-.cont-item-3 {
+.page {
     display: inline-flex;
+}
+.left-nav {
     height: auto;
+    width: 30%;
+    background-color: #fff;
+    border: 1px solid rgb(76, 215, 220);
+    margin: 15px;
+    padding: 25px;
+}
+.nav-but {
+    display: block;
+    height: 45px;
     width: 100%;
+    background-color: rgb(158, 211, 158);
+    border-radius: 5px;
+    border: 1px solid black;
+    color: white;
+    text-transform: uppercase;
+    font-family: sans-serif;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
-.p-1 {
-    background-color: rgb(242, 235, 235);
-    padding-left: 10px;
-    width: 100%;
-    border: 0.1px solid rgb(225, 158, 158);
-}
-.p-2, 
-.p-3 {
-    width: 200px;
-    padding-left: 10px;
-    background-color: rgb(252, 236, 236);
-    border: 0.1px solid rgb(225, 158, 158);
-}
-.cont-item-4,
-.cont-item-5 {
-    display: inline-flex;
+.info-text {
     height: auto;
-    width: 100%;
-    margin-top: 10px;
-}
-.jobs {
-    height: auto;
-    width: 200px;
-    background-color: rgb(232, 51, 51);
-    padding-left: 10px;
-}
-.text {
-    width: 100%;
-    height: auto;
+    width: 70%;
+    background-color: #fff;
+    border: 1px solid rgb(76, 215, 220);
+    margin: 15px;
+    padding: 25px;
+    font-size: 17px;
     text-align: justify;
-    background-color: rgb(225, 116, 57);
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
+    color: rgb(181, 179, 179);
+    font-family: sans-serif;
 }
-
-
-
+button:hover {
+    cursor: pointer;
+    background-color: rgba(158, 211, 158, 0.5);
+    transition: 300ms;
+}
